--- a/zac_demo_files/test_plot_tg.Rmd
+++ b/zac_demo_files/test_plot_tg.Rmd
@@ -68,3 +68,52 @@ create_tg_animation(dc, ac, val, type = "constraints", filename = "~/Downloads/c
 
 create_tg_animation(dc, ac, val, type = "depth", filename = "~/Downloads/depth.gif")
 ```
+
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "cells")
+plot_tg(dc, ac, proportion_type = "condition", type = "cells", condition_col = condition)
+plot_tg(dc, ac, proportion_type = "condition", type = "cells", condition_col = condition, comparison_type = "difference")
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "cells", max_legend=30)
+plot_tg(dc, ac, proportion_type = "condition", type = "cells", condition_col = condition, max_legend=30)
+plot_tg(dc, ac, proportion_type = "condition", type = "cells", condition_col = condition, comparison_type = "difference", max_legend=10, min_legend=-10)
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "quadrants")
+plot_tg(dc, ac, proportion_type = "condition", type = "quadrants", condition_col = condition)
+plot_tg(dc, ac, proportion_type = "condition", type = "quadrants", condition_col = condition, comparison_type = "difference")
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "cells", max_legend=70, min_legend=-10)
+plot_tg(dc, ac, proportion_type = "condition", type = "cells", condition_col = condition, max_legend=50)
+plot_tg(dc, ac, proportion_type = "condition", type = "cells", condition_col = condition, comparison_type = "difference", max_legend=10, min_legend=-10)
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "horizontal")
+plot_tg(dc, ac, proportion_type = "condition", type = "horizontal", condition_col = condition)
+plot_tg(dc, ac, proportion_type = "condition", type = "horizontal", condition_col = condition, comparison_type = "difference")
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "horizontal", max_legend=70, min_legend=-10)
+plot_tg(dc, ac, proportion_type = "condition", type = "horizontal", condition_col = condition, max_legend=50)
+plot_tg(dc, ac, proportion_type = "condition", type = "horizontal", condition_col = condition, comparison_type = "difference", max_legend=10, min_legend=-10)
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "vertical")
+plot_tg(dc, ac, proportion_type = "condition", type = "vertical", condition_col = condition)
+plot_tg(dc, ac, proportion_type = "condition", type = "vertical", condition_col = condition, comparison_type = "difference")
+```
+
+```{r}
+plot_tg(dc, ac, proportion_type = "overall", type = "vertical", max_legend=70, min_legend=-10)
+plot_tg(dc, ac, proportion_type = "condition", type = "vertical", condition_col = condition, max_legend=50)
+plot_tg(dc, ac, proportion_type = "condition", type = "vertical", condition_col = condition, comparison_type = "difference", max_legend=10, min_legend=-10)
+```
