--- a/ThinkingGrid/vignettes/plot_2x2.Rmd
+++ b/ThinkingGrid/vignettes/plot_2x2.Rmd
@@ -24,8 +24,20 @@ library(sjPlot)
 library(png)
 library(grid)
 
-data_file <- system.file("test_data", "test-2x2-data.csv", package = "ThinkingGrid")
+data_file <- system.file("extdata", "sample_data.csv", package = "ThinkingGrid")
 tg_data <- read.csv(data_file)
+
+knitr::kable(head(tg_data))
+```
+
+In case data is already collected, users can automatically add the quadrant depths using the `add_depths` function. the deliberate and automatic constraints column names must be passed to the function and must range from one to six for it to work correctly. 
+
+```{r add_depths}
+tg_data <- add_depths(
+  tg_data,
+  dc = "dc",
+  ac = "ac"
+)
 
 knitr::kable(head(tg_data))
 ```
@@ -33,15 +45,15 @@ knitr::kable(head(tg_data))
 The depths can be used as dependent variables in statistical analyses. The `thinkgrid_quadrant_plot` function provides a convenient way to visualize each of these analyses within their individual quadrants. Build the models and and their respective ggplot2 objects similar to the example shown below.
 
 ```{r models_and_plots}
-free_model <- lmer(free_correct ~ valence + (1|id), data = tg_data)
-sticky_model <- lmer(sticky_correct ~ valence + (1|id), data = tg_data)
-directed_model <- lmer(directed_correct ~ valence + (1|id), data = tg_data)
-affdir_model <- lmer(salience_directed ~ valence + (1|id), data = tg_data)
+free_model <- lmer(free ~ valence + (1|id), data = tg_data)
+sticky_model <- lmer(sticky ~ valence + (1|id), data = tg_data)
+directed_model <- lmer(directed ~ valence + (1|id), data = tg_data)
+salience_model <- lmer(hybrid ~ valence + (1|id), data = tg_data)
 
 free_plot <- plot_model(free_model, type = "pred")
 sticky_plot <- plot_model(sticky_model, type = "pred")
 directed_plot <- plot_model(directed_model, type = "pred")
-affdir_plot <- plot_model(affdir_model, type = "pred")
+salience_plot <- plot_model(salience_model, type = "pred")
 ```
 
 Once the plots are made, simply pas them to the `thinkigrid_quadrant_plot` function.
@@ -49,7 +61,7 @@ Once the plots are made, simply pas them to the `thinkigrid_quadrant_plot` funct
 ```{r thinkgrid_quadrant_plot1}
 combined_plot1 <- thinkgrid_quadrant_plot(
   p_sticky = sticky_plot,
-  p_salience = affdir_plot,
+  p_salience = salience_plot,
   p_free = free_plot,
   p_directed = directed_plot
 )
@@ -60,13 +72,13 @@ combined_plot1
 This function also accepts images as arguments, as long as they are transparent (e.g., png). Instead of passing the ggplot2 objects, the png object can be passed instead.
 
 ```{r thinkgrid_quadrant_plot2}
-image_file <- system.file("test_data", "rabbiduck.png", package = "ThinkingGrid")
+image_file <- system.file("extdata", "rabbiduck.png", package = "ThinkingGrid")
 image <- readPNG(image_file)
 image <- rasterGrob(image)
 
 combined_plot2 <- thinkgrid_quadrant_plot(
   p_sticky = image,
-  p_salience = affdir_plot,
+  p_salience = salience_plot,
   p_free = image,
   p_directed = directed_plot
 )
